# axiom

./: .env.example  .gitignore  01_create_table.sql  CLAUDE.md  GSD-PLAN.md  README.md  SKILL.md  analyze-cdao-patterns.py  analyze_traces.py  balance_check.json  bulk-update-prices.sql  bulk-update.py  cdao-corrected-balance.py  check-cdao-balance.py  check-cdao-net.py  check-counterparty.py  check-creation-tx.py  check-gas-refunds.py  check-missing-in.py  check-predecessor.py  check-system-txs.py  check-tx-structure.py  check_bad_txs.py  check_dex.py  check_etherscan.py  check_outgoing_traces.py  check_weth.py  compare-fees-nb.py  compare-in-nearblocks.py  compare-out-nearblocks.py  config.py  corrected-fee-calc.py  deep-trace-cdao.py  deep_check.py  defillama_prices.py  docker-compose.prod.yml  docker-compose.yml  fetch_trace_transfers.py  final_reconcile.py  find-missing-near.py  (+25 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
_archive/: README.md  engine_prices.py  ft_indexer.py  hybrid_indexer.py
api/: Dockerfile  __init__.py  dependencies.py  main.py  rate_limit.py
auth-service/: Dockerfile  package-lock.json  package.json
db/: audit.py  crypto.py  dedup_hmac_helpers.py  init.py  models.py  schema.sql  schema_evm.sql  schema_exchanges.sql  schema_users.sql  seed_wallets.py
defi/: __init__.py  burrow_parser.py  meta_pool_parser.py  ref_finance_parser.py
docs/: EXCHANGE_IMPORT_DESIGN.md  FMV_METHODOLOGY.md  INDEXER_RULES.md  LOGGING_POLICY.md  (+1 more)
indexers/account-indexer-rs/: Cargo.toml
indexers/account-indexer-rs/src/: main.rs
(+750 files in other folders)
