[package]
name = "account-indexer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1"
tar = "0.4"
serde_json = "1"
rayon = "1.10"
clap = { version = "4", features = ["derive", "env"] }
postgres = { version = "0.19", features = ["with-serde_json-1"] }

[profile.release]
lto = true
opt-level = 3
