[package]
name = "account-indexer-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
postgres = { version = "0.19", features = ["with-serde_json-1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
ctrlc = "3"
fastnear-neardata-fetcher = "0.35"
fastnear-primitives = "0.35"

[profile.release]
lto = true
opt-level = 3
